--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [[redirecciones]] 
-  de = “/api/*” 
-  a = “https://ephemeral-torte-31ffe2.netlify.app/" 
+  de = "/api/*" 
+  a = "https://ephemeral-torte-31ffe2.netlify.app/" 
   estado = 200
 [[redirecciones]] 
-  de = “/*” 
-  a = “/index.html” 
+  de = "/*" 
+  a = "/index.html" 
   estado = 200
