--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # The following redirect is intended for use with most SPAs that handle
 # routing internally.
 [[redirects]]
-  from = "/*"
+  from = "https://www.fincomun.com.mx/*"
   to = "/index.html"
   status = 200
 
