--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 # The following redirect is intended for use with most SPAs that handle
 # routing internally.
   [[redirects]]
-  from = "https://www.fincomun.com.mx"
-  to = "https://ephemeral-torte-31ffe2.netlify.app"
+  from = "/*"
+  to = "https://www.fincomun.com.mx/"
   status = 200
   force = true
   headers = {X-From = "Netlify"}
